--- a/Resume.html
+++ b/Resume.html
@@ -127,7 +127,8 @@
 </head>
 <body class="amith">
 	<header>
-        <p style="font-size:150%; margin-right:90%;">RESUME</p>
+		<a href="" download="Resume2023.pdf">Download</a>
+                <p style="font-size:150%; margin-right:90%;">PORTFILIO</p>
 		<img src="1606484081195.jpg">
 		<h1>PRABHU SHANKAR M.C</h1>
 		<p>HASSAN, KARNATAKA</p>
@@ -151,9 +152,18 @@
 		<div class="section onhover">
 			<h2>Projects</h2>
 			<ul>
-				<li>Air Quality Prediction Using Artificial Intelligent On Machine Learning, (Intventron).</li>
-				<li>E-Health Care Management , (Kodnest Training Centre)</li>
-				<li>Implementation of Basic Data Structures in Java using Windows Builder,(Kodnest Training Centre)
+				<li title="• The data collected can be used beyond studying air quality
+• We can aspire towards predictive methods that can help us proactively
+determine different measures that we can take that could improve air quality
+				">Air Quality Prediction Using Artificial Intelligent On Machine Learning, (Intventron).</li>
+				<li title="• Technologies used – Java, JavaScript, Apache tomcat , Oracle, Servlets, Jsp,Eclipse application.
+This project deals with the Corporate Medicare Management. This project is very helpful to both Medicare staff as well as to the public. It is having mainly Administration and Client modules.
+• To optimize bed occupation. the use of operating theatres, avoiding the cancellation of operations.
+• find clusters of patients, optimize the allocation of human and material resources towards and shifts , detect the influence of certain diseases in the hospital’s services
+		 ">E-Health Care Management , (Kodnest Training Centre)</li>
+				<li title="• Project aims to implement and explore the basic data structures in Java including arrays,
+stack, queue, linked list, doubly linked list, and circular queue. These data structures are fundamental in computer science 
+and software engineering as they are used extensively in building efficient algorithms and solving complex problems.">Implementation of Basic Data Structures in Java using Windows Builder,(Kodnest Training Centre)
             </ul>
         </div>
         <div class="section onhover">
