--- a/Resume.html
+++ b/Resume.html
@@ -127,7 +127,7 @@
 </head>
 <body class="amith">
 	<header>
-		<a href="" download="Resume2023.pdf">Download</a>
+		<a href="Resume2023.pdf" download>Download</a>
                 <p style="font-size:150%; margin-right:90%;">PORTFILIO</p>
 		<img src="1606484081195.jpg">
 		<h1>PRABHU SHANKAR M.C</h1>
