--- a/Resume.html
+++ b/Resume.html
@@ -127,8 +127,8 @@
 </head>
 <body class="amith">
 	<header>
-		<a href="Resume2023.pdf" download>Download</a>
-                <p style="font-size:150%; margin-right:90%;">PORTFILIO</p>
+		<a href="https://amithdoc.github.io/Resume_Prabhu/Resume2023.pdf" download="Prabhu Shankar Resume.pdf">Download</a>
+                <p style="font-size:150%; margin-right:90%;">PORTFOLIO</p>
 		<img src="1606484081195.jpg">
 		<h1>PRABHU SHANKAR M.C</h1>
 		<p>HASSAN, KARNATAKA</p>
